--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1612,7 +1612,7 @@
 
 @article{Copperman93,
   author = {Copperman, Max and McDowell, Charles E.},
-  title = {{A Further Note on Hennessy's \&Ldquo;Symbolic Debugging of Optimized Code\&Rdquo;}},
+  title = {{A Further Note on Hennessy's ``Symbolic Debugging of Optimized Code''}},
   journal = {ACM Transactions Programming Languages and Systems},
   issue_date = {April 1993},
   volume = {15},
