--- a/hcct.tex
+++ b/hcct.tex
@@ -1,3 +1,5 @@
+% !TEX root = thesis.tex
+
 \section{Mining Hot Calling Contexts in Small Space}
 
 %The first contribution we present in this thesis is an {\em interprocedural} technique for identifying the calling context that are most frequently encountered across function invocations at run-time. We show that the traditional approach for constructing a {\em Calling Context Tree} (CCT) might not be sustainable for real-world applications, as their CCTs often consist of tens of millions of nodes, making them difficult to analyze and also hurting execution time because of poor access locality. We thus introduce a novel data structure, the {\em Hot Calling Context Tree} (HCCT), in the spectrum of representations for interprocedural control flow. The HCCT is defined as the subtree of the CCT containing only its most visited nodes, which we call {\em hot}, along with their ancestors, and can be constructed independently of the CCT using fast, space-efficient algorithms for mining frequent items in data stream.
@@ -60,7 +62,7 @@ sjeng & 57 & 221 & OOM & 28\,370\,207\,811 \\
 \ifauthorea{\newline}{\vspace{-4mm}}
 
 %\mynote{Add reference to related work section for the CCT?}
-\noindent Calling context trees (CCTs) offer a compact representation for context-sensitive information. In fact, a CCT yields a more accurate profile than a {\em call graph} (which can sometimes drive to misleading conclusions~\cite{Ponder88, Spivey04}) in a space that is typically several orders of magnitude smaller than
+\noindent Calling context trees (CCTs) offer a compact representation for context-sensitive information. In fact, a CCT yields a more accurate profile than a {\em call graph} (which can sometimes lead to misleading conclusions~\cite{Ponder88, Spivey04}) in a space that is typically several orders of magnitude smaller than
 that
 %the space
 required to maintain a {\em call tree}. Also, many techniques have been proposed over the years to reduce the overhead for its construction.
@@ -127,13 +129,13 @@ In the data streaming computational model, algorithms should be able to perform 
 
 We remark that the practical requirements for the design of effective dynamic analysis tools -- which have to collect and process large amounts of data in nearly real time and with a minimal impact on the running program -- make it natural to look for the connections between these two research areas.
 
-\paragraph*{Finding Frequent Items in a Stream.} The problem of computing the HCCT online can be reconducted to the {\em frequent items} (a.k.a. heavy hitters) problem, which has been extensively studied in the data streaming model. Given a frequency threshold $\phi\in[0,1]$ and a stream of length $N$, the problem (in its simplest formulation) is to find all items that appear in the stream at least $\lfloor\phi N\rfloor$ times, i.e., having frequency $\ge\lfloor\phi N\rfloor$. For instance, for $\phi=0.1$ the problem seeks all items that appear in the stream at least $10\%$ of the times. Notice that at most $1/\phi$ items can have frequency larger than $\lfloor\phi N\rfloor$.  It can be proved that any algorithm that outputs an exact solution requires $\Omega(N)$ bits, even using randomization~\cite{Muthukrishnan05}. Note that this lower bound result extends to the problem of computing the HCCT, which cannot be calculated exactly in a space asymptotically smaller than the entire CCT. Hence, researchers have focused on solving an approximate version of the heavy hitters problem~\cite{Muthukrishnan05}:
+\paragraph*{Finding Frequent Items in a Stream.} The problem of computing the HCCT online can be reduced to the {\em frequent items} (a.k.a. heavy hitters) problem, which has been extensively studied in the data streaming model. Given a frequency threshold $\phi\in[0,1]$ and a stream of length $N$, the problem (in its simplest formulation) is to find all items that appear in the stream at least $\lfloor\phi N\rfloor$ times, i.e., having frequency $\ge\lfloor\phi N\rfloor$. For instance, for $\phi=0.1$ the problem seeks all items that appear in the stream at least $10\%$ of the time. Notice that at most $1/\phi$ items can have frequency larger than $\lfloor\phi N\rfloor$.  It can be proved that any algorithm that outputs an exact solution requires $\Omega(N)$ bits, even using randomization~\cite{Muthukrishnan05}. Note that this lower bound result extends to the problem of computing the HCCT, which cannot be calculated exactly in a space asymptotically smaller than the entire CCT. Hence, researchers have focused on solving an approximate version of the heavy hitters problem~\cite{Muthukrishnan05}:
 
 \begin{definition} 
 {\mbox{$(\phi,\varepsilon)$-heavy hitters problem.}} Given two parameters $\phi,\varepsilon\in[0,1]$, with $\varepsilon<\phi$, an algorithm has to return all items with frequency $\ge\lfloor\phi N\rfloor$ and no item with frequency $\le\lfloor(\phi-\varepsilon) N\rfloor$.
 \end{definition} 
 
-\noindent In the approximate solution, {\em false negatives} are not allowed, i.e., all frequent items must be returned. Instead, some {\em false positives} can exist, but their actual frequency is guaranteed to be at most $\varepsilon N$-far from the threshold $\lfloor\phi N\rfloor$. For the HCCT construction, we focus on a variant of the problem where, besides returning the heavy hitters, it is necessary to estimate their true frequencies accurately, the stream length $N$ is not known in advance, and all the items in the stream have equal weight.
+\noindent In the approximate solution, {\em false negatives} are not allowed, i.e., all frequent items must be returned. Instead, some {\em false positives} can exist, but their actual frequency is guaranteed to be at most $\varepsilon N$--far from the threshold $\lfloor\phi N\rfloor$. For the HCCT construction, we focus on a variant of the problem where, besides returning the heavy hitters, it is necessary to estimate their true frequencies accurately, the stream length $N$ is not known in advance, and all the items in the stream have equal weight.
 
 Counter-based streaming algorithms solve this problem by tracking a subset of items from the input and monitoring counts associated with them. For each new arrival, the algorithms decide whether to store the item or not, and, if so, what count to associate with it. Update times are typically dominated by a small (constant) number of dictionary or heap operations. These algorithms, according to extensive experimental studies~\cite{Cormode08,Manerikar09}, have superior performance with respect to space, running time, and accuracy compared to other classes of algorithms for $(\phi,\varepsilon)$-heavy hitters
 %that have been proposed in the literature in the last 15 years.
@@ -165,7 +167,7 @@ On the other hand, the HCCT is always a subtree of any $(\phi,\varepsilon)$-HCCT
 
 Computing a $(\phi,\varepsilon)$-HCCT online requires extending the canonical CCT construction algorithm with an online pruning strategy, driven by an underlying streaming routine. Constructing a CCT on-the-fly during the execution of a program is rather simple. Let $v$ be a cursor pointer that points to the current context, i.e., to the node corresponding to the calling context of the currently active routine ($v$ is initialized to the CCT root node). At each routine invocation, the algorithm checks whether $v$ has a child associated with the called routine. If this is the case, the existing child is used and its metrics are updated, if needed. Otherwise, a new child of $v$ is added to the CCT. In both cases, the cursor is moved to the callee. Upon routine termination, the cursor is moved back to the parent node in the CCT. This approach can be implemented by either instrumenting every routine call and return, or performing stack-walking when sampling is used to inhibit redundant profiling~\cite{Arnold00,Whaley00,Zhuang06}.
 
-In order to computer the set A of $(\phi,\varepsilon)$-heavy hitters, counter-based streaming algorithms need to monitor a slightly larger set M$\,\supseteq\,$A of elements. Nodes in M$\,\setminus\,$A can be either ancestors of nodes in A and thus already in the $(\phi,\varepsilon)$-HCCT, or nodes not in the $(\phi,\varepsilon)$-HCCT; for the latter category, we have to retain information about their ancestors as well, which might not be in the $(\phi,\varepsilon)$-HCCT. We denote as MCCT the minimal subtree of the CCT spanning all the nodes in M and the CCT root. \myfigure\ref{fig:hcct-venn} graphically illustrates the relationships among all our data structures.
+In order to compute the set A of $(\phi,\varepsilon)$-heavy hitters, counter-based streaming algorithms need to monitor a slightly larger set M$\,\supseteq\,$A of elements. Nodes in M$\,\setminus\,$A can be either ancestors of nodes in A and thus already in the $(\phi,\varepsilon)$-HCCT, or nodes not in the $(\phi,\varepsilon)$-HCCT; for the latter category, we have to retain information about their ancestors as well, which might not be in the $(\phi,\varepsilon)$-HCCT. We denote as MCCT the minimal subtree of the CCT spanning all the nodes in M and the CCT root. \myfigure\ref{fig:hcct-venn} graphically illustrates the relationships among all our data structures.
 
 Our $(\phi,\varepsilon)$-HCCT construction algorithm dynamically maintains the MCCT while the underlying streaming routine processes the execution trace and updates M. At query time, the streaming algorithm analyzes M to discard all the elements in M$\,\setminus\,$A: the MCCT is thus pruned appropriately and the $(\phi,\varepsilon)$-HCCT$\,\subseteq\,$MCCT is returned.
 
@@ -271,7 +273,7 @@ experimental evaluation of the {\em Lossy Counting}~\cite{Manku02} algorithm, re
 The update time is bounded by the dictionary operation of checking whether an item is monitored, and by the operations of finding and maintaining the item with minimum count. In our setting, we can avoid the dictionary operation by maintaining a flag for each tree node, which can directly be accessed for the current context using the cursor pointer to the MCCT.
 
 %A {\tt query} operation is answered by returning entries in M such that $count \geq \lfloor\phi N\rfloor$.
-\spacesaving\ answers {\tt query} operations by simply returning entries in M such that $count \geq \lfloor\phi N\rfloor$; associated frequency estimates are guaranteed to be at most $\varepsilon N$ far from actual frequencies.
+\spacesaving\ answers {\tt query} operations by simply returning entries in M such that $count \geq \lfloor\phi N\rfloor$; associated frequency estimates are guaranteed to be at most $\varepsilon N$--far from actual frequencies.
 
 \paragraph*{Engineering \spacesaving.} In~\cite{Metwally06}, the authors present an implementation of \spacesaving\ based on the {\em Stream-Summary} data structure, which is essentially an ordered bucket list where each bucket points to a list of items with the same count, and buckets are ordered by increasing count values.
 
